--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,15 @@
 			<version>1.4.2</version>
 			<scope>system</scope>
 			<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/araqne-logdb-client-1.4.2.jar</systemPath>
-		</dependency>	        
+		</dependency>	       
+		
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-math3</artifactId>
+		    <version>3.6.1</version>
+		</dependency>
+		 
 	</dependencies>
 	<build>
 		<plugins>
